--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "ws": "^8.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.1",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
