--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ COMMAND_TIMEOUT=30000
 ACQUISITION_TIMEOUT=60000
 HEARTBEAT_INTERVAL=30000
 LOG_LEVEL=info
+
+# Database (Milestone v1.0)
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=mti_wifi
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
