chore(08-01): install Kysely and configure type generation
- Installed kysely and kysely-codegen packages
- Created .kysely-codegenrc.json with postgres dialect
- Updated db:migrate script to auto-generate types after migrations
- Added db:codegen script to regenerate types on demand
- Added DATABASE_URL to .env.example for kysely-codegen
- Added ENCRYPTION_KEY placeholder to .env.example
- Generated src/database/types.ts with DB interface from schema

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ DATABASE_PORT=5432
 DATABASE_NAME=mti_wifi
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/mti_wifi
+
+# Encryption key for gateway passwords (32 bytes, base64 encoded)
+# Generate with: openssl rand -base64 32
+ENCRYPTION_KEY=
