--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "tsc",
     "dev": "tsx --env-file=.env src/main.ts",
     "start": "node dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "db:migrate": "tsx node_modules/.bin/node-pg-migrate up",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "db:migrate": "tsx node_modules/.bin/node-pg-migrate up && npm run db:codegen",
     "db:migrate:create": "node-pg-migrate create -j ts -m migrations",
+    "db:codegen": "kysely-codegen",
     "db:seed": "tsx --env-file=.env src/database/seed.ts",
     "db:reset": "tsx --env-file=.env src/database/reset.ts",
     "docker:up": "docker compose up -d",
@@ -23,6 +25,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "kysely": "^0.28.11",
     "pg": "^8.18.0",
     "ws": "^8.19.0",
     "zod": "^4.3.6"
@@ -31,9 +34,11 @@
     "@types/node": "^25.2.1",
     "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
+    "kysely-codegen": "^0.19.0",
     "node-pg-migrate": "^8.0.4",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "node-pg-migrate": {
     "migration-file-language": "ts",
