--- a/.env.example
+++ b/.env.example
@@ -27,4 +27,5 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/mti_wifi
 
 # Encryption key for gateway passwords (32 bytes, base64 encoded)
 # Generate with: openssl rand -base64 32
-ENCRYPTION_KEY=
+# DEVELOPMENT ONLY - DO NOT USE IN PRODUCTION
+ENCRYPTION_KEY=6MXcRNVvyYsB58DNgGjoMPQAKCWQW/XZS42AIHhIiVk=
