feat(09-01): install dependencies and create API configuration module
- Install fastify, fastify-type-provider-zod, @fastify/cors, @fastify/helmet, fastify-plugin
- Install pino-pretty as dev dependency for development logging
- Create src/api/config.ts following database/config.ts pattern
- Add API_PORT, NODE_ENV, CORS_ORIGIN to .env.example

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,8 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/mti_wifi
 # Generate with: openssl rand -base64 32
 # DEVELOPMENT ONLY - DO NOT USE IN PRODUCTION
 ENCRYPTION_KEY=6MXcRNVvyYsB58DNgGjoMPQAKCWQW/XZS42AIHhIiVk=
+
+# API Server (Milestone v1.0)
+API_PORT=3000
+NODE_ENV=development
+CORS_ORIGIN=*
