--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
+    "@fastify/helmet": "^13.0.2",
+    "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
+    "fastify-type-provider-zod": "^6.1.0",
     "kysely": "^0.28.11",
     "pg": "^8.18.0",
     "ws": "^8.19.0",
@@ -36,6 +41,7 @@
     "@types/ws": "^8.18.1",
     "kysely-codegen": "^0.19.0",
     "node-pg-migrate": "^8.0.4",
+    "pino-pretty": "^13.1.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
