--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx --env-file=.env src/main.ts",
+    "dev:api": "tsx --env-file=.env src/api/server.ts",
     "start": "node dist/main.js",
+    "start:api": "node dist/api/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "db:migrate": "tsx node_modules/.bin/node-pg-migrate up && npm run db:codegen",
