--- a/package.json
+++ b/package.json
@@ -1,56 +1,22 @@
 {
   "name": "mti-wifi-gsd",
   "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "private": true,
+  "workspaces": ["backend", "frontend"],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsx --env-file=.env src/main.ts",
-    "dev:api": "tsx --env-file=.env src/api/server.ts",
-    "start": "node dist/main.js",
-    "start:api": "node dist/api/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "db:migrate": "tsx node_modules/.bin/node-pg-migrate up && npm run db:codegen",
-    "db:migrate:create": "node-pg-migrate create -j ts -m migrations",
-    "db:codegen": "kysely-codegen",
-    "db:seed": "tsx --env-file=.env src/database/seed.ts",
-    "db:reset": "tsx --env-file=.env src/database/reset.ts",
+    "dev": "npm run dev --workspace=backend",
+    "dev:api": "npm run dev:api --workspace=backend",
+    "dev:frontend": "npm run dev --workspace=frontend",
+    "build": "npm run build --workspaces",
+    "build:backend": "npm run build --workspace=backend",
+    "build:frontend": "npm run build --workspace=frontend",
+    "test": "npm run test --workspaces --if-present",
+    "test:backend": "npm run test --workspace=backend",
+    "db:migrate": "npm run db:migrate --workspace=backend",
+    "db:seed": "npm run db:seed --workspace=backend",
+    "db:reset": "npm run db:reset --workspace=backend",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
     "docker:reset": "docker compose down -v && docker compose up -d"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@fastify/cors": "^11.2.0",
-    "@fastify/helmet": "^13.0.2",
-    "fastify": "^5.7.4",
-    "fastify-plugin": "^5.1.0",
-    "fastify-type-provider-zod": "^6.1.0",
-    "kysely": "^0.28.11",
-    "pg": "^8.18.0",
-    "ws": "^8.19.0",
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
-    "@types/node": "^25.2.1",
-    "@types/pg": "^8.16.0",
-    "@types/ws": "^8.18.1",
-    "kysely-codegen": "^0.19.0",
-    "node-pg-migrate": "^8.0.4",
-    "pino-pretty": "^13.1.3",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.18"
-  },
-  "node-pg-migrate": {
-    "migration-file-language": "ts",
-    "migrations-dir": "migrations",
-    "template-file-name": null
   }
 }
